k8s/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:  # The selector field defines how the deployment finds which pod to manage       
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: "achalise/demo-frontend"
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 8888
      targetPort: 80
  selector:
    app: frontend
    tier: frontend
  type: NodePort
